Add pagination and new frontend for browsing/watchlists
Backend: introduce pageable support for listings and deal matches — controllers accept page/size (and keyword for listings), ListingRepository/ListingService gain pageable query overloads, DealMatchingService now accepts Pageable and returns paged metadata (totalMatchCount, page, size, totalPages) via updated DealMatchesResponse. Watchlist endpoints switched from paged to list responses and WatchlistService adapted. Updated logging and validation/tests to use Pageable. Frontend: large UI additions and refactor — App.jsx now supports auth, debounced search, pagination and view routing; added API helpers (api.js, auth.js, watchlists.js) and new components (AuthForm, Home, Search, Page, Watchlists, Listing updated). Integration and unit tests updated to reflect pagination and DTO changes.